Fix Tag Pane Alignment & Add Quote Callout Styling

--- a/SCSS/Theme Rewrite/plugins-core/_tag-pane.scss
+++ b/SCSS/Theme Rewrite/plugins-core/_tag-pane.scss
@@ -21,8 +21,8 @@
     // margin-left: -3px;
 
     content: "#";
-    padding-right: 7px;
-    margin-left: 0;
+    padding-right: 5px;
+    margin-left: 1px;
     position: relative;
     color: var(--tag-text);
     width: var(--size-4-4);
